@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-29T08:16:36Z",
-  "count_outdated" : 365,
-  "uniques_outdated" : 197,
-  "count" : 387,
+  "timestamp" : "2022-06-30T00:59:40Z",
+  "count_outdated" : 367,
+  "uniques_outdated" : 198,
+  "count" : 389,
   "uniques" : 211,
   "clones" : [
-    {
-      "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
