@@ -1,3 +1,10 @@
+2022-06-30T00:59:40Z:
+* notice: last 14d: unq all: 1 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 197 365 / 211 387
+* notice: next accum: outdated-unq outdated-all / unq all: 198 367 / 211 389
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-15] / [2022-06-29]
+
 2022-06-29T08:16:36Z:
 * notice: last 14d: unq all: 1 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 197 365 / 210 387
